feat: fjerner enable-preview fra core og testmodell moduler